objects/copado__Personal_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This object stores the personal settings for Copado</description>
    <fields>
        <fullName>copado__API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__AccessStatusColumn__c</fullName>
        <inlineHelpText>Options are either &quot;dropdown&quot; or &quot;images&quot;</inlineHelpText>
        <label>AccessStatusColumn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Build_Task_Rows__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>This value determines the number of build task rows that should be displayed when viewing a Continuous Integration.</inlineHelpText>
        <label>Build Task Rows</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__DeployConnectionBox_height__c</fullName>
        <defaultValue>80</defaultValue>
        <label>DeployConnectionBox height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__DeployConnectionBox_width__c</fullName>
        <defaultValue>70</defaultValue>
        <label>DeployConnectionBox width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Personal Settings</label>
</CustomObject>